# SSH-over-NAT

./: .env  .gitignore  LICENSE  PKGBUILD  README.md  dodo.py  how_to_do-by_bb.txt  pyproject.toml
archive/: script
project/ssh_over_nat/: __main__.py  dodo.py
project/ssh_over_nat/_vendor/stun/: __init__.py
project/ssh_over_nat/client/: kcptun_utils.py
project/ssh_over_nat/common/: __init__.py  cache_dir.py  config_manager.py
project/ssh_over_nat/poc/: __main__.py  hashed.php  index.php  utils.py
project/ssh_over_nat/relay_php/: __init__.py  tunel_client.py  tunel_server.py
simple/: todo
src/: poc.py  rendezvous.py
src/client/: client.py  kcptun_utils.py
src/common/: __init__.py
src/poc/: __main__.py  index.php  utils.py
src/pseudo_ssh/client/: ssh_session.py
src/pseudo_ssh/keys/: my_server_key  my_server_key.pub
src/pseudo_ssh/server/: ssh_on_server.py
src/relay_php/: relay.php  tunel_client.py  tunel_server.py
src/relay_server/: relay_server.py
src/server/: database.py  server.py
src/unused/: register_and_punch.py  udp_tcp_bridge.py
