[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ssh-over-nat"
dynamic = ["version"]

dependencies = [
  "doit",
  "pydantic>2.1; os_name != 'nt'",
  "requests",
  "psutil",
  "platformdirs"
]

requires-python = ">= 3.9"

description = "This package uses NAT-traversal techniques to bypass NAT when running ssh"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
ssh-over-nat = "ssh_over_nat.__main__:main"

[tool.setuptools]
package-dir = {"" = "project"}

[tool.setuptools.packages.find]
where = ["project"]
include = ["ssh_over_nat*"]

[tool.setuptools.package-data]
"ssh_over_nat" = ["kcptun_bin/*"]

[tool.setuptools_scm]
write_to = "project/ssh_over_nat/__version__.py"
